<?xml version="1.0" encoding="UTF-8"?>
<!--
This file is part of the ProVANT simulator project.
Licensed under the terms of the MIT open source license. More details at
https://github.com/Guiraffo/ProVANT-Simulator/blob/master/LICENSE.md
-->
<package format="2">
	<name>vant4_2_winfnonlinear</name>
	<version>0.0.1</version>
	<description>The vant4_2_winfnonlinear package...</description>

	<maintainer email="jeduardo@ufmg.br">Junio Eduardo de Morais Aquino</maintainer>

	<license>MIT</license>

	<url type="website">http://provant.eng.ufmg.br/provantsimulator</url>
	<url type="repository">https://github.com/Guiraffo/ProVANT-Simulator.git</url>
	<url type="bugtracker">https://github.com/Guiraffo/ProVANT-Simulator/issues</url>

	<author email="danielneri@ufmg.br">Daniel Neri Cardoso</author>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>provant_simulator_cmake</build_depend>

	<depend>roscpp</depend>
	<depend>std_msgs</depend>
	<depend>simulator_msgs</depend>
	<depend>control_strategies_base</depend>
	<depend>eigen</depend>

	<export></export>
</package>